# project172

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  Dockerfile  README.md  SConstruct  animator.cpp  animator.h  application.cpp  application.h  assetmanager.cpp  assetmanager.h  audioplayer.cpp  audioplayer.h  background.cpp  background.h  build.run  build.sh  completion.sh  configure  configure.old  context.cpp  context.h  dopusky.txt  environment.cpp  environment.h  filesystem.cpp  filesystem.h  iinformative.cpp  loadable.cpp  loadable.h  main.cpp  netlistener.cpp  netlistener.h  object.h  project.sh  project172.pro  project172.pro.user.1a9a4c6.20  project172.pro.user.4.8-pre1  (+11 more)
additional/: auto.cpp  auto.h  controllerfinder.cpp  controllerfinder.h  event.cpp  event.h  fpsmonitor.h  lightparticle.cpp  lightparticle.h  math.h  rotozoom.cpp  rotozoom.h  spm.cpp  spm.h  stringformer.cpp  stringformer.h  timer.cpp  timer.h  trigger.cpp  trigger.h  vector.cpp  vector.h
additional/effects/: anaglyph.cpp  anaglyph.h
additional/net/: framebuilder.cpp  socket.cpp  socket.h
assets/: player1.json  player2.json
assets/meshes/: ship1.mtl
assets/shaders/: compile.sh  frag.spv  frag_inter.frag  frag_sampler.frag  frag_sampler.spv  vert_uniform.spv  vert_uniform.vert
assets/sounds/: docking.aup  rand.bfxrsound
assets/templates/: player1.json  player2.json
assets/xcf/: engine.xcf  start-ship-template.xcf  warp.xcf  warp2.xcf  warp3.xcf
build-qmake/: Makefile  project172
capabilities/: ai.cpp  capability.cpp  capability.h  controller.cpp  controller.h  docker.cpp  modulehandler.cpp  modulehandler.h  player.cpp  player.h
capabilities/modules/: engine.cpp  engine.h  module.cpp  module.h  warpdrive.cpp  warpdrive.h  weapon.cpp  weapon.h
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  project172.cbp  qtcsettings.cmake
gui/: guiblushingfloatingmessage.cpp  guiblushingfloatingmessage.h  guibutton.cpp  guibutton.h  guicentralmessage.cpp  guicentralmessage.h  guichoice.cpp  guichoice.h  guicontainer.cpp  guicontainer.h  guielement.cpp  guielement.h  guifloatingmessage.cpp  guifloatingmessage.h  guilabel.cpp  guilabel.h  guimain.cpp  guimain.h  guistack.cpp  guistack.h
klibcore/: klibcore.pri  klibcore.pro
klibcore/src/: kmacro.h  ksmartenum.cpp  ksmartenum.h
src/: animator.cpp  animator.h  application.h  assetmanager.cpp  assetmanager.h  audioplayer.cpp  audioplayer.h  background.cpp  background.h  context.cpp  context.h  debug.cpp  debug.h  debugchart.cpp  debugchart.h  environment.cpp  environment.cpp~~  environment.h  environment.h~~  explosivespawner.cpp  explosivespawner.h  filesystem.cpp  filesystem.h  flags.cpp  flags.h  ftestobject.cpp  ftestobject.h  iinformative.cpp  iinformative.h  informative.h  injectableentity.cpp  injectableentity.h  loadable.cpp  loadable.h  main.cpp  messagetype.h  near.cpp  near.h  netlistener.cpp  netlistener.h  (+25 more)
src/additional/: auto.cpp  auto.h  chartview.cpp  chartview.h  controllerfinder.h  devconsole.cpp  devconsole.h  e_variant.cpp  e_variant.h  event.cpp  event.h  lightparticle.cpp  lightparticle.h  math.cpp  math.h  memstatearner.cpp  memstatearner.h  mutex.cpp  mutex.h  pricetable.cpp  pricetable.h  segmentpaiter.cpp  segmentpaiter.h  speedindicator.cpp  speedindicator.h  spm.cpp  spm.h  stringformer.cpp  stringformer.h  taskconsole.cpp  taskconsole.h  timer.cpp  timer.h  trigger.cpp  trigger.h  variant.cpp  variant.cpp.new  variant.h  variant.h.new  vector.cpp  (+3 more)
src/appextensions/: screensettingsextension.cpp  screensettingsextension.h  volumeobserverextension.cpp  volumeobserverextension.h
src/assetexecutors/: animatorassetexecutor.cpp  animatorassetexecutor.h  assetexecutor.cpp  assetexecutor.h  assetexecutors.cpp  assetexecutors.h  audioassetexecutor.cpp  audioassetexecutor.h  capabilitiesassetexecutor.cpp  capabilitiesassetexecutor.h  factoryassetexecutor.cpp  factoryassetexecutor.h  mapassetexecutor.h  nodesassetexecutor.cpp  nodesassetexecutor.h  numberassetexecutor.cpp  numberassetexecutor.h  spriteassetexecutor.cpp  spriteassetexecutor.h  stringassetexecutor.cpp  stringassetexecutor.h  templatevectorassetexecutor.cpp  templatevectorassetexecutor.h  vectorassetexecutor.cpp  vectorassetexecutor.h
src/json/: CMakeLists.txt  config.h  json_value.cpp  reader.h
src/vulkanimplementation/: CMakeLists.txt  vulkangraphicsprovider.cpp  vulkangraphicsprovider.h  vulkanrenderer.cpp  vulkanrenderer.h
src/vulkanimplementation/e172vp/: bootstrapobject.cpp  bootstrapobject.h  commandpool.h  descriptorsetlayout.cpp  descriptorsetlayout.h  font.cpp  font.h  graphicsobject.cpp  graphicsobject.h  graphicsobjectcreateinfo.cpp  graphicsobjectcreateinfo.h  pipeline.cpp  pipeline.h  presentationobject.cpp  presentationobject.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  vertex.cpp  vertex.h  vertexobject.cpp  vertexobject.h
src/vulkanimplementation/e172vp/graphicsobject/: commandpool.cpp  commandpool.h  graphicsobject.cpp  graphicsobject.h  graphicsobjectcreateinfo.h  renderpass.h  swapchain.h
src/vulkanimplementation/e172vp/time/: elapsedtimer.cpp  elapsedtimer.h  time.cpp  time.h
src/vulkanimplementation/e172vp/tools/: buffer.cpp  buffer.h  extensiontools.cpp  extensiontools.h  hardware.cpp  hardware.h  logicdevicefactory.cpp  logicdevicefactory.h  mesh.cpp  mesh.h  stringvector.cpp  stringvector.h  validation.cpp  validation.h  vulkaninstancefactory.cpp  vulkaninstancefactory.h
src/vulkanimplementation/e172vp/vertexobjects/: abstractvertexobject.cpp  abstractvertexobject.h  externaltexvertexobject.cpp  externaltexvertexobject.h  texturedvertexobject.cpp  texturedvertexobject.h  vertexobject.cpp  vertexobject.h  wirevertexobject.cpp  wirevertexobject.h
tests/: CMakeLists.txt  main.cpp  personspec.cpp  personspec.h  warecontainerspec.cpp  warecontainerspec.h  waretest.cpp  waretest.h
units/: camera.cpp  camera.h  movable.cpp  movable.h  particle.cpp  particle.h  projectile.cpp  projectile.h  ship.cpp  ship.h  unit.cpp  unit.h
worlds/: arenaworld.cpp  arenaworld.h  defaultworld.cpp  world.h
(+410 files in other folders)
